# src/responseActions/nextTramsToDirection.js
@@ -1,5 +1,5 @@
 export const nextTramsToDirection = async (req, res) => {
-  const direction = req?.body?.intentInfo?.parameters?.direction[0]?.originalValue;
+  const direction = req?.body?.intentInfo?.parameters?.direction?.originalValue;
   if (!direction) {
     return 'Je ne peux pas récupérer la destination.';
   }
@@ -9,6 +9,5 @@ export const nextTramsToDirection = async (req, res) => {
 
   const response = await fetch(`https://tam.alexis-mateo.fr/stop/next/${encodeURIComponent('pl. de l\'europe')}?line=1&destination=${direction}`);
   const data = await response.json();
-  const nextTram = data[0].duration.min;
-  return `Le prochain tram vers ${direction} arrive dans ${nextTram} minutes.`
+  return `Les prochains trams vers ${direction} arrive dans ${data.map(data => data.duration.min).join(', ')} minutes.`;
 } 
